Fix paragraph format to remove double punctuation

--- a/arxiv/paper.sty
+++ b/arxiv/paper.sty
@@ -128,7 +128,7 @@ Available at \url{#2}}}}
 \titleformat*{\subsection}{\bfseries}
 
 % Format paragraph headings
-\titleformat{\paragraph}[runin]{\itshape}{}{}{}[.]
+\titleformat{\paragraph}[runin]{\itshape}{}{}{}[\@addpunct{.}]
 
 % Add period after heading numbers
 \titlelabel{\thetitle.\quad}
